new URL and view for adding to existing lists. FT passes

--- a/todo
+++ b/todo
@@ -1,2 +1,1 @@
-- Add unique URLs for each list
-- Add URLs for adding a new item to an existing list via POST
+Refactor away some duplication in urls.py
