enforce model validation in list view

--- a/todo
+++ b/todo
@@ -1,2 +1,3 @@
 -remove hardcoded URLs from views.py
 -remove hardcoded url from forms in list.html and home.html
+-remove duplcation of validation logic in views
